<resources>
    <string name="app_name">Pizza Ordering</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pizza Home</string>
    <string name="nav_header_subtitle">pizzahome@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Ordering History</string>
    <string name="menu_slideshow">My Balance</string>
    <string name="menu_menu">Menu</string>

    <string name="button_beginOrder">Order Here</string>
    <string name="button_confirm">Place order</string>
    <string name="button_back">Back</string>

    <string name="go_price">3.99</string>
    <string name="gp_price">2.99</string>
    <string name="mushroom_price">4.99</string>
    <string name="tomato_price">1.99</string>
    <string name="onion_price">0.99</string>
    <string name="pineapple_price">2.99</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

</resources>