<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/welcomepage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_local_pizza_24"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_gallery" />
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_baseline_account_balance_wallet_24"-->
<!--            android:title="@string/menu_slideshow" />-->
<!--        <item-->
<!--            android:id="@+id/settings"-->
<!--            android:title="Settings" />-->
    </group>
</menu>